Bug 1302779 - Part 1. Resolve a local fragment against the current document that relative URLs are resolved against. r=heycam

MozReview-Commit-ID: 2vJDnfzoPiC

--HG--
extra : rebase_source : 3c43bd335caa918ac32f3ba1979f822db5319b11